# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
description = "Volcengine TOS service implementation for Apache OpenDAL"
name = "opendal-service-tos"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
opendal-core = { path = "../../core", version = "0.55.0", default-features = false }
quick-xml = { workspace = true, features = ["serialize", "overlapped-lists"] }
reqsign-file-read-tokio = { git = "https://github.com/apache/opendal-reqsign.git", rev = "7b2bbb1", default-features = false }
reqsign-http-send-reqwest = { git = "https://github.com/apache/opendal-reqsign.git", rev = "7b2bbb1", default-features = false }
reqsign-core = { git = "https://github.com/apache/opendal-reqsign.git", rev = "7b2bbb1", default-features = false }
reqsign-volcengine-tos = { git = "https://github.com/apache/opendal-reqsign.git", rev = "7b2bbb1", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio.workspace = true
rand.workspace = true